# apollo-file-server

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  compose.yaml  plan.md
test_db/init/: initialize_test_db.sql
